--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -1,6 +1,6 @@
-{% extends 'cabinet/cabinet_layout.html.twig' %}
+{% extends "cabinet/cabinet_layout.html.twig" %}
 
-{% block title %}{{ 'Profile'|trans }}{% endblock %}
+{% block title %}{{ "Profile"|trans }}{% endblock %}
 
 {% block content %}
     <div class="col-lg-12">
@@ -15,7 +15,7 @@
                 {{ mess }}
             </div>
         {% endif %}
-        {{ form_start(profileForm, {'action': path('post_profile'), 'method': 'POST', 'attr': {'id': 'profileForm','class':'mb-3'}}) }}
+        {{ form_start(profileForm, {"action": path("post_profile"), "method": "POST", "attr": {"id": "profileForm","class":"mb-3"}}) }}
         <div class="card card-default">
             <div class="card-body text-center">
                 <div class="py-4"><img class="img-fluid rounded-circle img-thumbnail thumb96"
@@ -23,12 +23,12 @@
                                                         {% if user.avatar %}
                                                             {{ asset(user.avatar) }}
                                                         {% else %}
-                                                            {{ asset('img/user/02.jpg') }}
+                                                            {{ asset("img/user/02.jpg") }}
                                                         {% endif %}
-                                                       " alt="{{ 'Contact'|trans }}"></div>
+                                                       " alt="{{ "Contact"|trans }}"></div>
 {#                <label class="btn btn-primary"><input type="file" name="avatar"></label>#}
                 {% if profileForm.avatarFile.vars.errors|length %}
-                    {{ form_widget(profileForm.avatarFile, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                    {{ form_widget(profileForm.avatarFile, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                 {% else %}
                     {{ form_widget(profileForm.avatarFile) }}
                 {% endif %}
@@ -36,7 +36,7 @@
 
                 <div class="form-group">
                     <div class="offset-5 col-2">
-                        {{ form_row(profileForm.save_avatar, {'label': 'Save avatar'|trans}) }}
+                        {{ form_row(profileForm.save_avatar, {"label": "Save avatar"|trans}) }}
                     </div>
                 </div>
             </div>
@@ -44,19 +44,19 @@
         <div class="card card-default">
             <div class="card-header d-flex align-items-center">
                 <div class="d-flex justify-content-center col">
-                    <div class="h4 m-0 text-center">{{ 'Contact Information'|trans }}</div>
+                    <div class="h4 m-0 text-center">{{ "Contact Information"|trans }}</div>
                 </div>
             </div>
             <div class="card-body">
                 <div class="row py-4 justify-content-center">
                     <div class="col-12 col-sm-10">
                         <div class="form-group">
-                            {{ form_label(profileForm.firstName,'First name'|trans, {
-                                'label_attr': {'class': 'text-muted'}
+                            {{ form_label(profileForm.firstName,"First name"|trans, {
+                                "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
                                 {% if profileForm.firstName.vars.errors|length %}
-                                    {{ form_widget(profileForm.firstName, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                                    {{ form_widget(profileForm.firstName, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
                                     {{ form_widget(profileForm.firstName) }}
                                 {% endif %}
@@ -68,12 +68,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            {{ form_label(profileForm.secondName,'Second name'|trans, {
-                                'label_attr': {'class': 'text-muted'}
+                            {{ form_label(profileForm.secondName,"Second name"|trans, {
+                                "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus ">
                                 {% if profileForm.secondName.vars.errors|length %}
-                                    {{ form_widget(profileForm.secondName, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                                    {{ form_widget(profileForm.secondName, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
                                     {{ form_widget(profileForm.secondName) }}
                                 {% endif %}
@@ -86,12 +86,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            {{ form_label(profileForm.lastName,'Last name'|trans, {
-                                'label_attr': {'class': 'text-muted'}
+                            {{ form_label(profileForm.lastName,"Last name"|trans, {
+                                "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
                                 {% if profileForm.lastName.vars.errors|length %}
-                                    {{ form_widget(profileForm.lastName, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                                    {{ form_widget(profileForm.lastName, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
                                     {{ form_widget(profileForm.lastName) }}
                                 {% endif %}
@@ -103,12 +103,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            {{ form_label(profileForm.phone,'Phone'|trans, {
-                                'label_attr': {'class': 'text-muted'}
+                            {{ form_label(profileForm.phone,"Phone"|trans, {
+                                "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
                                 {% if profileForm.phone.vars.errors|length %}
-                                    {{ form_widget(profileForm.phone, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                                    {{ form_widget(profileForm.phone, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
                                     {{ form_widget(profileForm.phone) }}
                                 {% endif %}
@@ -120,12 +120,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            {{ form_label(profileForm.email,'Email address'|trans, {
-                                'label_attr': {'class': 'text-muted'}
+                            {{ form_label(profileForm.email,"Email address"|trans, {
+                                "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
                                 {% if profileForm.email.vars.errors|length %}
-                                    {{ form_widget(profileForm.email, {'attr': {'class': 'is-invalid form-control border-right-0'}}) }}
+                                    {{ form_widget(profileForm.email, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
                                     {{ form_widget(profileForm.email) }}
                                 {% endif %}
@@ -138,7 +138,7 @@
                         </div>
                         <div class="form-group">
                             <div class="offset-5 col-2">
-                                {{ form_row(profileForm.save, {'label': 'Edit profile'|trans}) }}
+                                {{ form_row(profileForm.save, {"label": "Edit profile"|trans}) }}
                             </div>
                         </div>
                     </div>
