--- a/templates/cabinet/profile/profile.html.twig
+++ b/templates/cabinet/profile/profile.html.twig
@@ -7,7 +7,8 @@
 {#  START FORM  #}
         {% if  errors is defined and errors is not empty %}
         <div class="alert alert-danger" role="alert">
-        {{ form_errors(profileForm) }}
+{#        {{ errors }}#}
+            {{ "Error. Please fill all fields"|trans }}
         </div>
         {% endif %}
         {% if  mess is defined and mess is not empty %}
@@ -65,6 +66,7 @@
                                  <em class="fa fa-user"></em>
                              </span>
                                 </div>
+                                <div class="invalid-feedback">{{ form_errors(profileForm.firstName) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -100,6 +102,7 @@
                                  <em class="fa fa-user"></em>
                              </span>
                                 </div>
+                                <div class="invalid-feedback">{{ form_errors(profileForm.lastName) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -117,6 +120,7 @@
                                  <em class="fa fa-phone"></em>
                              </span>
                                 </div>
+                                <div class="invalid-feedback">{{ form_errors(profileForm.phone) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -134,6 +138,7 @@
                                  <em class="fa fa-envelope"></em>
                              </span>
                                 </div>
+                                <div class="invalid-feedback">{{ form_errors(profileForm.email) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
