--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
         <div class="wrapper">
             {% block body %}{% endblock %}
         </div>
-        {% block javascripts %}{% endblock %}
+
         <script src="{{ asset('sklad-express/vendor/modernizr/modernizr.custom.js') }}"></script>
         <script src="{{ asset('sklad-express/vendor/js-storage/js.storage.js') }}"></script>
         <script src="{{ asset('sklad-express/vendor/i18next/i18next.js') }}"></script>
@@ -32,8 +32,9 @@
         <script src="{{ asset('sklad-express/vendor/jquery/dist/jquery.js') }}"></script>
         <script src="{{ asset('sklad-express/vendor/popper.js/dist/umd/popper.js') }}"></script>
         <script src="{{ asset('sklad-express/vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+        <script src="{{ asset('sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js') }}"></script>
         <script src="{{ asset('sklad-express/vendor/parsleyjs/dist/parsley.js') }}"></script>
         <script src="{{ asset('sklad-express/js/app.js') }}"></script>
-        
+        {% block javascripts %}{% endblock %}
     </body>
 </html>
