--- a/templates/cabinet/addresses/editform.html.twig
+++ b/templates/cabinet/addresses/editform.html.twig
@@ -30,9 +30,25 @@
             </div>
             <div class="card-body">
                 <div class="row py-4 justify-content-center">
-                    <div class="col-12 col-sm-10">
+                    <div class="col-4 col-sm-12">
                         <div class="form-group">
                             <div class="h6 m-0">{{ "Choise delivery method"|trans }}</div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12">
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" id="inlineRadio1"
+                                       type="radio" name="inlineRadioOptions"
+                                       value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" id="inlineRadio2"
+                                       type="radio" name="inlineRadioOptions"
+                                       value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -309,7 +325,7 @@
                 <div class="row py-4 justify-content-center">
                     <div class="col-2 col-sm-2">
                         <div class="form-group">
-                                {{ form_row(addressForm.save, {"label": "Save"|trans}) }}
+                            {{ form_row(addressForm.save, {"label": "Save"|trans}) }}
                         </div>
                     </div>
                 </div>
