--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
         <script src="{{ asset("sklad-express/vendor/popper.js/dist/umd/popper.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/bootstrap/dist/js/bootstrap.js") }}"></script>
         <script src="{{ asset("sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js?ver=0.1") }}"></script>
-        <script src="{{ asset("sklad-express/vendor/parsleyjs/dist/parsley.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/parsleyjs/dist/parsley.js?ver=0.1") }}"></script>
         <script src="{{ asset("sklad-express/js/app.js") }}"></script>
         <script src="{{ asset("sklad-express/js/custom.js?ver=0.1") }}"></script>
         {% block javascripts %}{% endblock %}
