--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -5,19 +5,24 @@
 {% block content %}
     <div class="card-body">
                <p class="text-center py-2">{{"SIGNUP TO GET INSTANT ACCESS"|trans}}.</p>
-
+        {{  form_errors(registrationForm) }}
    {{ form_start(registrationForm, {"attr": {"id": "registerForm","class":"mb-3","novalidate":true}}) }}
         <div class="form-group">
                {{ form_label(registrationForm.email,"Email address"|trans, {
                             "label_attr": {"class": "text-muted"}
                                 }) }}
                   <div class="input-group with-focus">
-                         {{ form_widget(registrationForm.email)}}
+                      {% if registrationForm.email.vars.errors|length %}
+                          {{ form_widget(registrationForm.email, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                      {% else %}
+                          {{ form_widget(registrationForm.email) }}
+                      {% endif %}
                          <div class="input-group-append">
                              <span class="input-group-text text-muted bg-transparent border-left-0">
                                  <em class="fa fa-envelope"></em>
                              </span>
                          </div>
+                      <div class="invalid-feedback">{{ form_errors(registrationForm.email) }}</div>
                      </div>
         </div>
         
@@ -26,12 +31,17 @@
                                             "label_attr": {"class": "text-muted"}
                                             }) }}
                      <div class="input-group with-focus">
-                         {{ form_widget(registrationForm.plainPassword)}}
+                         {% if registrationForm.plainPassword.vars.errors|length %}
+                             {{ form_widget(registrationForm.plainPassword, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                         {% else %}
+                             {{ form_widget(registrationForm.plainPassword) }}
+                         {% endif %}
                          <div class="input-group-append">
                              <span class="input-group-text text-muted bg-transparent border-left-0">
                                  <em class="fa fa-envelope"></em>
                              </span>
                          </div>
+                         <div class="invalid-feedback">{{ form_errors(registrationForm.plainPassword) }}</div>
                      </div>
         </div>
        <div class="form-group">
@@ -39,19 +49,30 @@
                                             "label_attr": {"class": "text-muted"}
                                             }) }}
                      <div class="input-group with-focus">
-                         {{ form_widget(registrationForm.rePlainPassword)}}
+                         {% if registrationForm.rePlainPassword.vars.errors|length %}
+                             {{ form_widget(registrationForm.rePlainPassword, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                         {% else %}
+                             {{ form_widget(registrationForm.rePlainPassword) }}
+                         {% endif %}
                          <div class="input-group-append">
                              <span class="input-group-text text-muted bg-transparent border-left-0">
                                  <em class="fa fa-envelope"></em>
                              </span>
                          </div>
+                         <div class="invalid-feedback">{{ form_errors(registrationForm.rePlainPassword) }}</div>
                      </div>
         </div>
 <div class="checkbox c-checkbox mt-0">
     <label>
-        {{ form_widget(registrationForm.agreed)}}
+        {% if registrationForm.agreed.vars.errors|length %}
+            {{ form_widget(registrationForm.agreed, {"attr": {"class": "is-invalid"}}) }}
+        {% else %}
+            {{ form_widget(registrationForm.agreed) }}
+        {% endif %}
         <span class="fa fa-check">
-        </span> {{"I agree with the"|trans}}<a class="ml-1" href="#">{{"terms"|trans}}</a></label></div>
+        </span> {{"I agree with the"|trans}}<a class="ml-1" href="#">{{"terms"|trans}}</a></label>
+    <div class="invalid-feedback">{{ form_errors(registrationForm.agreed) }}</div>
+</div>
 
     {{ form_row(registrationForm.save, {"label": "Create account"|trans})}}
     
