--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="form-group">
-                                    {{ form_label(form.shipDate,"addresses"|trans, {
+                                    {{ form_label(form.addresses,"addresses"|trans, {
                                         "label_attr": {"class": "text-muted"}
                                     }) }}
                                     <div class="input-group with-focus ">
