--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -16,28 +16,28 @@
                 <!-- START table-responsive-->
                 {% if totalItemCount %}
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover">
+                    <table class="table-sm table-bordered table-striped">
                         <thead>
-                        <tr>
-                            <th>{{ "Create Date" | trans }}</th>
-                            {% if isSend is defined and isSend == 1 %}
-                                <th>{{ "trackingNumber" | trans }}</th>
-                            {% else %}
-                                <th>{{ "trackingNumber Nova Pochta" | trans }}</th>
-                            {% endif %}
-                            <th>{{ "sendDetailWeight" | trans }}</th>
-                            <th>{{ "volumeWeigth" | trans }}</th>
-                            <th>{{ "shipgCost" | trans }}</th>
-                            <th>{{ "declareValue" | trans }}</th>
-                            <th>{{ "Adress" | trans }}</th>
-                            <th>{{ "Status" | trans }}</th>
-                            <th></th>
-                        </tr>
+                            <tr class="text-center">
+                                <th  scope="col">{{ "Create Date" | trans }}</th>
+                                {% if isSend is defined and isSend == 1 %}
+                                    <th scope="col">{{ "trackingNumber" | trans }}</th>
+                                {% else %}
+                                    <th scope="col">{{ "trackingNumber Nova Pochta" | trans }}</th>
+                                {% endif %}
+                                 <th scope="col">{{ "sendDetailWeight" | trans }}</th>
+                                 <th scope="col">{{ "volumeWeigth" | trans }}</th>
+                                 <th scope="col">{{ "shipgCost" | trans }}</th>
+                                 <th scope="col">{{ "declareValue" | trans }}</th>
+                                 <th scope="col">{{ "Adress" | trans }}</th>
+                                 <th scope="col">{{ "Status" | trans }}</th>
+                                 <th colspan="2" scope="col">{{ "Action" | trans }}</th>
+                            </tr>
                         </thead>
                         <tbody>
                         {% if items is defined and items is iterable %}
                             {% for item in items %}
-                                <tr>
+                                <tr class="text-center">
                                     <td>{{ item.getCreatedAtStr }}</td>
                                     {% if isSend is defined and isSend == 1 %}
                                         <td>{{ item.trNum }}</td>
@@ -68,6 +68,8 @@
                                                     </div>
                                                     <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change" value="{{ "Pay" | trans }}" />
                                             {% endif %}
+                                        {% else %}
+                                            <input type="button" id="" class="payment-btn btn btn-success liq-pay-button-change disabled" value="{{ "Pay" | trans }}" />
                                         {% endif %}
                                     </td>
                                 </tr>
