--- a/templates/cabinet/cabinet_layout.html.twig
+++ b/templates/cabinet/cabinet_layout.html.twig
@@ -18,7 +18,7 @@
              </div>
          {% endfor %}
          {% for message in app.flashes('errors') %}
-             <div class="alert alert-error">
+             <div class="alert alert-danger ">
                  {{ message }}
              </div>
          {% endfor %}
