--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -81,7 +81,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    {{ form_label(form.products,"products"|trans, {
+                                    {{ form_label(form.products,"Content"|trans, {
                                         "label_attr": {"class": "text-muted"}
                                     }) }}
                                     <div class="with-focus">
@@ -93,7 +93,7 @@
                         <div class="row">
                             <div class="col-md-9">
                                 <div class="form-group">
-                                    {{ form_label(form.addresses,"addresses"|trans, {
+                                    {{ form_label(form.addresses,"Address"|trans, {
                                         "label_attr": {"class": "text-muted"}
                                     }) }}
                                     <div class="input-group with-focus ">
